--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,18 @@
 header {
 	position: fixed;
 	width: 100%;
-	height: 100px;
-	background-color: #a0a0a0;
-	border-bottom: 1px solid black;
-	box-shadow: 2px 2px 4px black;
+	height: 125px;
+	background-color: #fff;
 }
 
 header div.logo {
-	float: left;
+	display: inline-block;
+	width: 100%;
+	text-align: center;
 }
 
 header nav {
-	float: left;
+	text-align: center;
 }
 
 header nav ul {
@@ -31,17 +31,27 @@ header nav ul li {
 
 header nav ul li a {
 	display: block;
-	padding: 41px;
+	margin-top: 40px;
+	margin-right: 40px;
+	margin-left: 40px;
 	text-decoration: none;
-	color: #fff;
+	color: #dcdcdc;
 }
 
 header nav ul li a:hover {
-	background-color: #777;
+	color: #CDB5CD;
 }
 
-
 #content {
-	padding-top: 150px;
+	padding-top: 225px;
+	text-align: center;
+}
+
+.project {
+	display: inline-block;
+	margin-top: -5px;
+	margin-right: -5px;
+	margin-left: -5px;
+	margin-bottom: -5px;
 }
 
