--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 .container {
 	width: 960px;
 	margin: 0 auto;
+	background-color: #fff;
 }
 
 header {
-	position: fixed;
 	width: 100%;
 	height: 125px;
 	background-color: #fff;
@@ -14,10 +14,12 @@ header div.logo {
 	display: inline-block;
 	width: 100%;
 	text-align: center;
+	margin-top: 25px;
 }
 
 header nav {
 	text-align: center;
+	background-color: #fff;
 }
 
 header nav ul {
@@ -31,27 +33,26 @@ header nav ul li {
 
 header nav ul li a {
 	display: block;
-	margin-top: 40px;
+	margin-top: 20px;
 	margin-right: 40px;
 	margin-left: 40px;
 	text-decoration: none;
-	color: #dcdcdc;
+	color: #c2c1bc;
 }
 
 header nav ul li a:hover {
-	color: #CDB5CD;
+	color: #C4dad5;
 }
 
 #content {
-	padding-top: 225px;
+	padding-top: 100px;
 	text-align: center;
 }
 
 .project {
 	display: inline-block;
-	margin-top: -5px;
-	margin-right: -5px;
-	margin-left: -5px;
-	margin-bottom: -5px;
-}
-
+	margin-top: 5px;
+	margin-right: 5px;
+	margin-left: 5px;
+	margin-bottom: 5px;
+}	
