--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,55 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* <------------------------- HOME AND LOGOS PAGE CSS ---------------------> */
 .container {
-	width: 100%;
+	width: 960px;
 	margin: 0 auto;
 	background-color: #FFFF;
 }
@@ -17,36 +67,9 @@ header div.logo {
 	margin-top: 25px;
 }
 
-header nav {
-	text-align: center;
-	background-color: #fff;
-}
-
-header nav ul {
-	margin: 0;
-	padding: 0;
-}
-
-header nav ul li {
-	display: inline-block;
-}
-
-header nav ul li a {
-	display: block;
-	margin-top: 20px;
-	margin-right: 40px;
-	margin-left: 40px;
-	text-decoration: none;
-	color: #92A8C8;
-}
-
-header nav ul li a:hover {
-	color: #FDC47E;
-}
-
 #content {
-	padding-top: 100px;
-	text-align: center;
+	width: 960px;
+	margin: 0 auto;
 }
 
 .project {
@@ -57,6 +80,8 @@ header nav ul li a:hover {
 	margin-bottom: 5px;
 }	
 
+/* <------------------------- BISON PAGE CSS ---------------------> */
+
 .ads {
 	display: block;
 	text-align: center;
@@ -65,4 +90,263 @@ header nav ul li a:hover {
 
 #first {
 	margin-top: 5px;
+}
+
+/* <------------------------- WEB PAGE CSS ---------------------> */
+
+/* <-----this doesnt work for some reason
+want to center the candle stuff on the page
+
+.candle-stuff {
+	margin: 0 auto;
+}
+
+------------------------->*/
+
+.wrapper {
+	position: relative;
+	display: inline-block;
+	float: left;
+	margin-top: 80px;
+}
+
+.wax-color {
+	z-index: -100;
+	position: absolute;
+	width: 341px;
+  	height: 305px;
+  	bottom: 64px;
+  	left: 8px;
+  	background-color: #fff;
+  	border-top-left-radius: 6px;
+  	border-top-right-radius: 6px;
+  	border-bottom-right-radius: 40px;
+  	border-bottom-left-radius: 40px;
+}
+
+.product-title {
+	float: left;
+	margin-top: 80px;
+	margin-left: 40px;
+	text-transform: uppercase;
+	text-align: left;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-weight: 400;
+  	font-size: 20px;
+  	color: #555;
+}
+
+p {
+	margin-top: 20px;
+	margin-left: 40px;
+	line-height: 20px;
+  	height: 75px;
+  	width: 350px;
+  	float: left;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	text-align: left;
+	color: #555;
+}
+
+.fragrances {
+  float: left;
+  margin-left: 40px;
+  height: 325px;
+  width: 330px;
+  background-color: #fafafa;
+  border-radius: 5px;
+  border: 1px solid;
+  border-color: #ededed;
+}
+
+div .it_takes_two_to_mango {
+	display: inline-block;
+	float: left;
+	margin-left: 9px;
+	margin-top: 35px;
+	width: 69px;
+	height: 60px;
+	background-color: #fbb040;
+	border: 1px solid;
+  	border-color: #ededed;
+  	cursor: pointer; cursor: hand;
+}
+
+div .go_ahead_make_my_daisy {
+	display: inline-block;
+	float: left;
+	margin-left: 9px;
+	margin-top: 35px;
+	width: 69px;
+	height: 60px;
+	background-color: #ffe14f;
+	border: 1px solid;
+  	border-color: #ededed;
+  	cursor: pointer; cursor: hand;
+}
+
+div .espresso_yourself {
+	display: inline-block;
+	float: left;
+	margin-left: 9px;
+	margin-top: 35px;
+	width: 69px;
+	height: 60px;
+	background-color: #948671;
+	border: 1px solid;
+	border-color: #ededed;
+	cursor: pointer; cursor: hand;
+}
+
+div .romancing_the_scone {
+	display: inline-block;
+	float: left;
+	margin-left: 9px;
+	margin-top: 35px;
+	width: 69px;
+	height: 60px;
+	background-color: #d4a67c;
+	border: 1px solid;
+	border-color: #ededed;
+	cursor: pointer; cursor: hand;
+}
+
+div .you_drive_me_coconuts {
+	display: inline-block;
+	float: left;
+	margin-left: 9px;
+	margin-top: 10px;
+	width: 69px;
+	height: 60px;
+	background-color: #9cc5ca;
+	border: 1px solid;
+	border-color: #ededed;
+	cursor: pointer; cursor: hand;
+}
+
+div .toucan_play_this_game {
+	display: inline-block;
+	float: left;
+	margin-left: 9px;
+	margin-top: 10px;
+	width: 69px;
+	height: 60px;
+	background-color: #0073ae;
+	border: 1px solid;
+	border-color: #ededed;
+	cursor: pointer; cursor: hand;
+}
+
+div .oh_say_can_you_sea {
+	display: inline-block;
+	float: left;
+	margin-left: 9px;
+	margin-top: 10px;
+	width: 69px;
+	height: 60px;
+	background-color: #006b6e;
+	border: 1px solid;
+	border-color: #ededed;
+	cursor: pointer; cursor: hand;
+}
+
+div .can_you_pear_me_now {
+	display: inline-block;float: left;
+	margin-left: 9px;
+	margin-top: 10px;
+	width: 69px;
+	height: 60px;
+	background-color: #b0bc22;
+	border: 1px solid;
+	border-color: #ededed;
+	cursor: pointer; cursor: hand;
+}
+
+div .thyme_and_a_half {
+	display: inline-block;float: left;
+	margin-left: 9px;
+	margin-top: 10px;
+	width: 69px;
+	height: 60px;
+	background-color: #4b721d;
+	border: 1px solid;
+	border-color: #ededed;
+	cursor: pointer; cursor: hand;
+}
+
+div .did_you_ask_persimmon {
+	display: inline-block;float: left;
+	margin-left: 9px;
+	margin-top: 10px;
+	width: 69px;
+	height: 60px;
+	background-color: #fab077;
+	border: 1px solid;
+	border-color: #ededed;
+	cursor: pointer; cursor: hand;
+}
+
+div .a_walk_down_plumeria_lane {
+	display: inline-block;float: left;
+	margin-left: 9px;
+	margin-top: 10px;
+	width: 69px;
+	height: 60px;
+	background-color: #f16682;
+	border: 1px solid;
+	border-color: #ededed;
+	cursor: pointer; cursor: hand;
+}
+
+div .kiss_me_im_iris {
+	display: inline-block;float: left;
+	margin-left: 9px;
+	margin-top: 10px;
+	width: 69px;
+	height: 60px;
+	background-color: #eeb6d4;
+	border: 1px solid;
+	border-color: #ededed;
+	cursor: pointer; cursor: hand;
+}
+
+div .knock_on_wood {
+	display: inline-block;float: left;
+	margin-left: 9px;
+	margin-top: 10px;
+	width: 69px;
+	height: 60px;
+	background-color: #b6b8ba;
+	border: 1px solid;
+	border-color: #ededed;
+	cursor: pointer; cursor: hand;
+}
+
+div .ive_got_a_crush_on_yuzu {
+	display: inline-block;float: left;
+	margin-left: 9px;
+	margin-top: 10px;
+	width: 69px;
+	height: 60px;
+	background-color: #fff6dc;
+	border: 1px solid;
+	border-color: #ededed;
+	cursor: pointer; cursor: hand;	
+}
+
+/* <------------------------- ABOUT PAGE CSS ---------------------> */
+
+.bio img {
+	display: inline-block;
+	margin-top: 80px;
+	margin-left: 6px;
+	float: left;
+}
+
+.bio p {
+	display: inline-block;
+	float: left;
+	margin-top: 15px;
+	width: 500px;
+	font-size: 13px;
 }
