portfolio site additions and changes

--- a/styles.css
+++ b/styles.css
@@ -47,42 +47,71 @@ table {
   border-spacing: 0;
 }
 
-/* <------------------------- HOME AND LOGOS PAGE CSS ---------------------> */
+/* <------------------------- INDEX PAGE ---------------------> */
 
 .container {
 	width: 960px;
 	margin: 0 auto;
-	background-color: #FFFF;
+	background-color: #FFF;
 }
 
 header {
-	width: 100%;
-	height: 125px;
+	margin-top: 25px;
 	background-color: #fff;
+	text-align: center;
 }
 
-header div.logo {
-	display: inline-block;
-	width: 100%;
-	text-align: center;
+.main-nav {
 	margin-top: 25px;
+}
+
+.nav-item {
+	display: inline-block;
+	float: left;
+	margin-bottom: 20px;
+}
+
+.nav-item:nth-child(2){
+	margin-left: 20px;
 }
 
 .project {
 	display: inline-block;
-	margin-top: 5px;
-	margin-right: 5px;
-	margin-left: 10px;
-	margin-bottom: 5px;
+	float: left;
+	margin: 0 0 20px 19px;
+}
+
+.row div:first-child{
+	margin-left: 0px;
 }	
 
 footer {
 	clear: both;
-	margin: 100px;
 	text-align: center;
+	background-color: #B1DADA;
+	width: 100%;
+	height: 94px;
+}
+
+footer p {
+	padding-top: 40px;
+	color: #8B8CC4;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-weight: 400;
+  	font-size: 13px;
+  	text-transform: uppercase;
 }
 
 /* <------------------------- BISON PAGE CSS ---------------------> */
+
+h1 {
+	text-transform: uppercase;
+	text-align: center;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-weight: 400;
+  	font-size: 20px;
+  	color: #555;
+}
 
 .ads {
 	display: inline block;
@@ -91,13 +120,73 @@ footer {
 	margin-top: 20px;
 }
 
+.ads:last-child {
+	margin-bottom: 20px;
+}
+
+/* <------------------------- ABOUT PAGE CSS ---------------------> */
+
+#bio_img {
+	display: inline-block;
+	float: left;
+	margin: 10px 0 0 100px;
+}
+
+.bio h2 {
+	float: left;
+	margin-left: 40px;
+	text-transform: uppercase;
+	text-align: left;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-weight: 400;
+  	font-size: 20px;
+  	color: #555;
+}
+
+.bio p {
+	display: inline-block;
+	float: left;
+	margin: 10px 0 20px 40px;
+	width: 450px;
+	font-size: 13px;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-weight: 400;
+	text-align: left;
+	line-height: 16px;
+}
+
+/* <------------------------- GREENION PAGE CSS ---------------------> */
+
+.video-box {
+	position: relative;
+	height: 450px;
+	width: 960px;
+}
+
+iframe {
+	position: absolute;
+    top: 50px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    margin: auto;
+}
+
+/* <------------------------- FHC PAGE CSS ---------------------> */
+
+.ads-container {
+	margin-top: 280px;
+}
+
 /* <------------------------- WEB PAGE CSS ---------------------> */
 
-.wrapper {
+.candle {
 	position: relative;
 	display: inline-block;
 	float: left;
 	margin-top: 40px;
+	margin-left: 80px;
 }
 
 .wax-color {
@@ -127,12 +216,19 @@ footer {
 }
 
 .candle-stuff p {
+	float: left;
 	margin-top: 20px;
 	margin-left: 40px;
 	line-height: 20px;
   	height: 75px;
-  	width: 350px;
-  	float: left;
+  	width: 400px;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	text-align: left;
+	color: #555;
+}
+
+.fragrance_name {
+	float: left;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	text-align: left;
 	color: #555;
@@ -143,13 +239,6 @@ footer {
   margin-left: 40px;
   height: 325px;
   width: 400px;
-}
-
-.fragrance_name {
-	float: left;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	text-align: left;
-	color: #555;
 }
 
 div .it_takes_two_to_mango {
@@ -327,18 +416,19 @@ div .ive_got_a_crush_on_yuzu {
 	cursor: pointer; cursor: hand;	
 }
 
-.line {
-	clear: both;
-	margin-top: 525px;
-	width:100%;
-	height:5px;
-	background: #939393;
+#tabs-holder {
+	float: left;
+	margin-top: 25px;
+	height: 300px;
+	background-color: #fff;
 }
 
-#tab-container {
-  margin-top: 40px;	
+#tab-container { 	
+  margin-top: 40px;
+  margin-left: 80px;
   font-family: "Helvetica", sans-serif;
   color: #444;
+  line-height: 22px;
 }
 
 .active{
@@ -400,43 +490,4 @@ div .ive_got_a_crush_on_yuzu {
 
 #tab-content .tab_section:not(.active) {
   display: none;
-}
-
-/* <------------------------- ABOUT PAGE CSS ---------------------> */
-
-.bio {
-	margin-left: 100px;
-}
-
-.bio img {
-	display: inline-block;
-	margin-top: 50px;
-	margin-left: 6px;
-	float: left;
-}
-
-h2 {
-	float: left;
-	margin-top: 50px;
-	margin-left: 20px;
-	text-transform: uppercase;
-	text-align: left;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-weight: 400;
-  	font-size: 20px;
-  	color: #555;
-}
-
-.bio p {
-	display: inline-block;
-	float: left;
-	margin-left: 20px;
-	margin-top: 15px;
-	margin-bottom: 100px;
-	width: 425px;
-	font-size: 14px;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-weight: 400;
-	text-align: left;
-	line-height: 16px;
 }
