--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,84 @@ footer p {
   	text-transform: uppercase;
 }
 
+.row {
+	text-align: center;
+	margin-bottom: 10px;
+}
+
+.category {
+	display: inline-block;
+    background: #f5f5f5;
+    width: 30%;
+    margin-right: 1%;
+    &:last-child {
+        margin-right: 0;
+    }
+}
+
+.category img {
+	max-width: 100%;
+}
+
+.category .cat-info {
+	height: 213px;
+    padding: 14px 33px 24px 33px;
+    text-align: left;
+}
+
+.category .cat-info .cat-title {
+    margin-bottom: 4px;
+    font-size: 32px;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.category .cat-info .cat-description {
+	font-size: 18px;
+	line-height: 22px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 300;
+    margin-bottom: 16px;
+}
+
+.category .cat-info .learn-more-button button {
+    position: relative;
+    border: none;
+    background: transparent;
+    margin-bottom: 53px;
+    padding-left: 0;
+    &:focus, &:hover {
+        color: $c-pink;
+        outline: none;
+        -webkit-transition: 200ms all ease-in-out;
+        transition: 200ms all ease-in-out;
+        &:after {
+            border-left-color: #f6d5d5;
+            -webkit-transition: 200ms all ease-in-out;
+            transition: 200ms all ease-in-out;
+        }
+    }
+    &:after {
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 0;
+        display: block;
+        border-top: 3px solid transparent;
+        border-bottom: 3px solid transparent;
+        border-left: 3px solid #000000;
+        border-right: none;
+        border-left-width: 5px;
+        top: 16px;
+        right: -16px;
+    }
+}
+
+.category .cat-info .learn-more-button span {
+    text-transform: uppercase;
+    font-size: 18px;
+	font-family: 'Roboto Condensed', sans-serif;
+} 
+       
 /* <------------------------- BISON PAGE CSS ---------------------> */
 
 h1 {
