--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,25 @@
 @import "compass/css3";
  
 body {
+
+	text-align: center;
+
+	h1 {
+		margin-bottom: 10px;
+		color: #8e8e98;
+		font-size: 52px;
+	    font-family: 'Nunito', sans-serif;
+	    line-height: 40px;
+	    text-transform: uppercase;
+	}
+
+	h4 {
+		color: #8B8CC4;
+	    font-family: 'Nunito', sans-serif;
+	    text-transform: uppercase;
+	    font-size: 24px;
+	}
+
 	#top, #bottom, #left, #right {
 		background: #d9d9ec;
 		position: fixed;
@@ -24,49 +43,56 @@ body {
 	#bottom { bottom: 0; }
 
 	header {
-		.container {
-			max-width: 50%;
-			margin: auto;
-			margin-top: 200px;
-			margin-bottom: 120px;
-			text-align: center;
-			.intro {
-				h1 {
-					margin-bottom: 10px;
-					color: #8e8e98;
-					font-size: 52px;
-				    font-family: 'Nunito', sans-serif;
-				    line-height: 40px;
-				    text-transform: uppercase;
-				}
-				h4 {
-					color: #8B8CC4;
-				    font-family: 'Nunito', sans-serif;
-				    text-transform: uppercase;
-				    font-size: 24px;
-				}
-			}
+		max-width: 50%;
+		margin: auto;
+		padding: 100px;
+	}
+
+	.section {
+		padding: 100px;
+	}
+
+	.resume {
+		clear: both;
+		background-color: #f5f5f5;
+		
+		h4 {
+			margin-bottom: 20px;
+		}
+
+		button {
+			border: 3px solid #8B8CC4;
+			border-radius: 8px;
+			height: 74px;
+	    	width: 260px;
+		    background-color: #f5f5f5;
+		    &:hover {
+		    	border-color: #d9d9ec;
+		    	a {
+		    		color: #d9d9ec;
+		    	}
+		    }
+		    a {
+		    	font-family: 'Nunito', sans-serif;
+			    text-transform: uppercase;
+			    font-size: 16px;
+			    font-weight: 100;
+			    color: #8B8CC4;
+			    text-decoration: none;
+		    }
 		}
 	}
 
-	button {
-		border: 3px solid #8B8CC4;
-		border-radius: 8px;
-	    background: #FFF;
-	    padding: 20px 40px;
-	    &:hover {
-	    	border-color: #d9d9ec;
-	    }
-	    a {
-	    	font-family: 'Nunito', sans-serif;
-		    text-transform: uppercase;
-		    font-size: 16px;
-		    font-weight: 100;
-		    color: #8B8CC4;
-		    text-decoration: none;
-		    &:hover {
-		    	color: #d9d9ec;
-		    }
-	    }
-	}
+	footer {
+		clear: both;
+		padding: 100px;
+		background-color: #d0d0d0;
+		h6 {
+			margin: auto;
+			color: #FFF;
+			font-family: 'Nunito', sans-serif;
+		  	font-size: 13px;
+		  	text-transform: uppercase;
+		}
+	}	
 }
