--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -63,49 +63,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 5, ../sass/style.scss */
-body #top, body #bottom, body #left, body #right {
-  background: #d9d9ec;
-  position: fixed;
-}
-/* line 10, ../sass/style.scss */
-body #left, body #right {
-  top: 0;
-  bottom: 0;
-  width: 15px;
-}
-/* line 15, ../sass/style.scss */
-body #left {
-  left: 0;
-}
-/* line 16, ../sass/style.scss */
-body #right {
-  right: 0;
-}
-/* line 18, ../sass/style.scss */
-body #top, body #bottom {
-  left: 0;
-  right: 0;
-  height: 15px;
-}
-/* line 23, ../sass/style.scss */
-body #top {
-  top: 0;
-}
-/* line 24, ../sass/style.scss */
-body #bottom {
-  bottom: 0;
-}
-/* line 27, ../sass/style.scss */
-body header .container {
-  max-width: 50%;
-  margin: auto;
-  margin-top: 200px;
-  margin-bottom: 120px;
+/* line 4, ../sass/style.scss */
+body {
   text-align: center;
 }
-/* line 34, ../sass/style.scss */
-body header .container .intro h1 {
+/* line 8, ../sass/style.scss */
+body h1 {
   margin-bottom: 10px;
   color: #8e8e98;
   font-size: 52px;
@@ -113,26 +76,83 @@ body header .container .intro h1 {
   line-height: 40px;
   text-transform: uppercase;
 }
-/* line 42, ../sass/style.scss */
-body header .container .intro h4 {
+/* line 17, ../sass/style.scss */
+body h4 {
   color: #8B8CC4;
   font-family: 'Nunito', sans-serif;
   text-transform: uppercase;
   font-size: 24px;
 }
-/* line 52, ../sass/style.scss */
-body button {
+/* line 24, ../sass/style.scss */
+body #top, body #bottom, body #left, body #right {
+  background: #d9d9ec;
+  position: fixed;
+}
+/* line 29, ../sass/style.scss */
+body #left, body #right {
+  top: 0;
+  bottom: 0;
+  width: 15px;
+}
+/* line 34, ../sass/style.scss */
+body #left {
+  left: 0;
+}
+/* line 35, ../sass/style.scss */
+body #right {
+  right: 0;
+}
+/* line 37, ../sass/style.scss */
+body #top, body #bottom {
+  left: 0;
+  right: 0;
+  height: 15px;
+}
+/* line 42, ../sass/style.scss */
+body #top {
+  top: 0;
+}
+/* line 43, ../sass/style.scss */
+body #bottom {
+  bottom: 0;
+}
+/* line 45, ../sass/style.scss */
+body header {
+  max-width: 50%;
+  margin: auto;
+  padding: 100px;
+}
+/* line 51, ../sass/style.scss */
+body .section {
+  padding: 100px;
+}
+/* line 55, ../sass/style.scss */
+body .resume {
+  clear: both;
+  background-color: #f5f5f5;
+}
+/* line 59, ../sass/style.scss */
+body .resume h4 {
+  margin-bottom: 20px;
+}
+/* line 63, ../sass/style.scss */
+body .resume button {
   border: 3px solid #8B8CC4;
   border-radius: 8px;
-  background: #FFF;
-  padding: 20px 40px;
+  height: 74px;
+  width: 260px;
+  background-color: #f5f5f5;
 }
-/* line 57, ../sass/style.scss */
-body button:hover {
+/* line 69, ../sass/style.scss */
+body .resume button:hover {
   border-color: #d9d9ec;
 }
-/* line 60, ../sass/style.scss */
-body button a {
+/* line 71, ../sass/style.scss */
+body .resume button:hover a {
+  color: #d9d9ec;
+}
+/* line 75, ../sass/style.scss */
+body .resume button a {
   font-family: 'Nunito', sans-serif;
   text-transform: uppercase;
   font-size: 16px;
@@ -140,7 +160,17 @@ body button a {
   color: #8B8CC4;
   text-decoration: none;
 }
-/* line 67, ../sass/style.scss */
-body button a:hover {
-  color: #d9d9ec;
+/* line 86, ../sass/style.scss */
+body footer {
+  clear: both;
+  padding: 100px;
+  background-color: #d0d0d0;
+}
+/* line 90, ../sass/style.scss */
+body footer h6 {
+  margin: auto;
+  color: #FFF;
+  font-family: 'Nunito', sans-serif;
+  font-size: 13px;
+  text-transform: uppercase;
 }
