--- a/sass/style.scss
+++ b/sass/style.scss
@@ -46,6 +46,9 @@ body {
 		max-width: 50%;
 		margin: auto;
 		padding: 100px;
+		a {
+			text-decoration: none;
+		}
 	}
 
 	.section {
@@ -83,6 +86,24 @@ body {
 		}
 	}
 
+	#aaa {
+		background-color: #ffaaaa;
+	    height: 280px;
+	    width: 307px;
+	    cursor: pointer;
+	    a {
+	    	text-decoration: none;
+		    color: #fff;
+		    text-transform: uppercase;
+		    text-align: center;
+		    display: inherit;
+		    font-weight: 800;
+		    margin-top: 40%;
+		    font-size: 32px;
+		    font-family: 'Roboto Condensed', sans-serif;
+	    }
+	}
+
 	footer {
 		clear: both;
 		padding: 100px;
@@ -106,5 +127,22 @@ body {
 				}
 			}
 		}
+	}
+}
+
+/* AAA comps page styles */
+.aaa-comps-page {
+	.aaa-comps {
+		padding: 40px;
+		a {
+			display: block;
+			padding: 10px;
+	    	font-family: 'Nunito', sans-serif;
+		    text-transform: uppercase;
+		    font-size: 16px;
+		    font-weight: 100;
+		    color: #8B8CC4;
+		    text-decoration: none;
+    	}
 	}	
 }
