--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -122,20 +122,24 @@ body header {
   margin: auto;
   padding: 100px;
 }
-/* line 51, ../sass/style.scss */
+/* line 49, ../sass/style.scss */
+body header a {
+  text-decoration: none;
+}
+/* line 54, ../sass/style.scss */
 body .section {
   padding: 100px;
 }
-/* line 55, ../sass/style.scss */
+/* line 58, ../sass/style.scss */
 body .resume {
   clear: both;
   background-color: #f5f5f5;
 }
-/* line 59, ../sass/style.scss */
+/* line 62, ../sass/style.scss */
 body .resume h4 {
   margin-bottom: 20px;
 }
-/* line 63, ../sass/style.scss */
+/* line 66, ../sass/style.scss */
 body .resume button {
   border: 3px solid #8B8CC4;
   border-radius: 8px;
@@ -143,15 +147,15 @@ body .resume button {
   width: 260px;
   background-color: #f5f5f5;
 }
-/* line 69, ../sass/style.scss */
+/* line 72, ../sass/style.scss */
 body .resume button:hover {
   border-color: #d9d9ec;
 }
-/* line 71, ../sass/style.scss */
+/* line 74, ../sass/style.scss */
 body .resume button:hover a {
   color: #d9d9ec;
 }
-/* line 75, ../sass/style.scss */
+/* line 78, ../sass/style.scss */
 body .resume button a {
   font-family: 'Nunito', sans-serif;
   text-transform: uppercase;
@@ -160,13 +164,32 @@ body .resume button a {
   color: #8B8CC4;
   text-decoration: none;
 }
-/* line 86, ../sass/style.scss */
+/* line 89, ../sass/style.scss */
+body #aaa {
+  background-color: #ffaaaa;
+  height: 280px;
+  width: 307px;
+  cursor: pointer;
+}
+/* line 94, ../sass/style.scss */
+body #aaa a {
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  display: inherit;
+  font-weight: 800;
+  margin-top: 40%;
+  font-size: 32px;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+/* line 107, ../sass/style.scss */
 body footer {
   clear: both;
   padding: 100px;
   background-color: #d0d0d0;
 }
-/* line 90, ../sass/style.scss */
+/* line 111, ../sass/style.scss */
 body footer h6 {
   margin: auto;
   color: #FFF;
@@ -174,18 +197,35 @@ body footer h6 {
   font-size: 13px;
   text-transform: uppercase;
 }
-/* line 97, ../sass/style.scss */
+/* line 118, ../sass/style.scss */
 body footer .social {
   margin: 20px;
 }
-/* line 99, ../sass/style.scss */
+/* line 120, ../sass/style.scss */
 body footer .social ul li {
   display: inline-block;
 }
-/* line 101, ../sass/style.scss */
+/* line 122, ../sass/style.scss */
 body footer .social ul li a .icon {
   width: 25px;
   height: 25px;
   display: block;
   background-color: pink;
+}
+
+/* AAA comps page styles */
+/* line 135, ../sass/style.scss */
+.aaa-comps-page .aaa-comps {
+  padding: 40px;
+}
+/* line 137, ../sass/style.scss */
+.aaa-comps-page .aaa-comps a {
+  display: block;
+  padding: 10px;
+  font-family: 'Nunito', sans-serif;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 100;
+  color: #8B8CC4;
+  text-decoration: none;
 }
