--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,7 @@
 body {
 
 	text-align: center;
+	max-width: 1280px;
 
 	h1 {
 		margin-bottom: 10px;
@@ -49,6 +50,14 @@ body {
 		a {
 			text-decoration: none;
 		}
+	}
+
+	.wrapper {
+		display: flex;
+	}
+
+	.project {
+		display: flex;
 	}
 
 	.section {
