--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,20 +1,14 @@
 body {
   text-align: center;
-  max-width: 1280px; }
-  body h1 {
-    margin-bottom: 8px;
-    color: #8e8e98;
-    font-size: 52px;
-    font-family: 'Nunito', sans-serif;
-    line-height: 40px;
-    text-transform: uppercase; }
-  body h4 {
-    color: #8B8CC4;
-    font-family: 'Nunito', sans-serif;
-    text-transform: uppercase;
-    font-size: 24px; }
+  max-width: 1280px;
+  /*////////////////
+// PAGE BORDERS //
+////////////////*/
+  /*////////////////////	
+// END PAGE BORDERS //
+////////////////////*/ }
   body #top, body #bottom, body #left, body #right {
-    background: #d9d9ec;
+    background: #eedcf6;
     position: fixed; }
   body #left, body #right {
     top: 0;
@@ -32,12 +26,11 @@ body {
     top: 0; }
   body #bottom {
     bottom: 0; }
-  body header {
-    max-width: 50%;
-    margin: auto;
-    padding: 100px; }
-    body header a {
-      text-decoration: none; }
+  body h1 {
+    color: #8e8e98;
+    font-size: 32px;
+    font-family: 'Roboto Slab', serif;
+    padding: 20px; }
   body .wrapper {
     display: flex;
     flex-wrap: wrap;
