--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -3,24 +3,12 @@ body {
 	text-align: center;
 	max-width: 1280px;
 
-	h1 {
-		margin-bottom: 8px;
-		color: #8e8e98;
-		font-size: 52px;
-	    font-family: 'Nunito', sans-serif;
-	    line-height: 40px;
-	    text-transform: uppercase;
-	}
-
-	h4 {
-		color: #8B8CC4;
-	    font-family: 'Nunito', sans-serif;
-	    text-transform: uppercase;
-	    font-size: 24px;
-	}
+/*////////////////
+// PAGE BORDERS //
+////////////////*/
 
 	#top, #bottom, #left, #right {
-		background: #d9d9ec;
+		background: #eedcf6;
 		position: fixed;
 	}
 
@@ -40,13 +28,15 @@ body {
 	#top { top: 0; }
 	#bottom { bottom: 0; }
 
-	header {
-		max-width: 50%;
-		margin: auto;
-		padding: 100px;
-		a {
-			text-decoration: none;
-		}
+/*////////////////////	
+// END PAGE BORDERS //
+////////////////////*/
+
+	h1 {
+		color: #8e8e98;
+		font-size: 32px;
+		font-family: 'Roboto Slab', serif;
+		padding: 20px;
 	}
 
 	.wrapper {
